Wikipedia: top: fix template font visibility

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.4
+@version        1.1.5
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -682,6 +682,7 @@ table.wikitable.filehistory th, /* https://commons.wikimedia.org/wiki/File:LT-19
 table.wikitable > tbody > tr > th, /* https://en.wikipedia.org/wiki/Russian_language#Vocabulary */
 .vgr-hrow th, /* https://en.wikipedia.org/wiki/S.W.I.N.E. */
 .plainlinks i, /* https://en.wikipedia.org/wiki/Talk:Warcraft_III:_Reign_of_Chaos */
+.metadata.plainlinks, /* https://ru.wikipedia.org/wiki/Проект:Кино/Списки/Список_фильмов_студии_«Беларусьфильм» */
 .article-history-milestones, /* https://en.wikipedia.org/wiki/Talk:Warcraft_III:_Reign_of_Chaos */
 .ext-discussiontools-init-pageframe-latestcomment, /* Top after page title, text like "Latest comment: 54 minutes ago by Sgt.McHale in topic "Native American-sounding music for the Night Elves" at https://en.wikipedia.org/wiki/Talk:Warcraft_III:_Reign_of_Chaos */
 .block-indent /* https://be.wikipedia.org/wiki/Вікіпедыя:Адказы_на_частую_крытыку */
