Commons: License table - fix color

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.6
+@version        1.1.7
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -351,6 +351,7 @@ tr.bright + *,
 .searchdidyoumean, /* Commons search: "Did you mean" */
 .mw-selflink, /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 table.standard tr:not(:first-child), /* https://ru.wikipedia.org/wiki/Солнечное_затмение_8_апреля_2024_года */
+[style='width:100%; clear:both; margin:0.5em auto; background-color:#f7f8ff; border:2px solid #8888aa; direction: ltr; border-spacing: 8px; padding: 0px;'], /* Licensing table https://commons.wikimedia.org/wiki/File:Catholic_Christianity_(silver)_rv.png */
 td[style='text-align:center; font-style: italic;'], /* Infobox: "Онлайн-фестиваль белорусского документального кино" https://ru.wikipedia.org/wiki/BelarusDocs */
 .sidebar-collapse, /* https://en.wikipedia.org/wiki/Culture_of_Belarus#Music */
 .property-navibox-main tr, /* https://www.wikidata.org/wiki/Wikidata:Property_proposal/myabandonware.com_game_id */
