--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.7
+@version        1.1.8
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -358,6 +358,13 @@ td[style='text-align:center; font-style: italic;'], /* Infobox: "Онлайн-ф
 #talkheader td[style='border-bottom: 1px solid #c0c090; font-weight: bold;'],
 .banner-shell-header, /* https://en.wikipedia.org/wiki/Talk:Warcraft_III:_Reign_of_Chaos */
 .wikibase-entitytermsforlanguagelistview .wikibase-entitytermsforlanguagelistview-listview .wikibase-entitytermsforlanguageview .wikibase-entitytermsforlanguageview-description textarea,
+
+/* Infobox https://be-tarask.wikipedia.org/wiki/Царква_Сьвятых_Барыса_і_Глеба_(Горадня) */
+td[style='font-size:100%; line-height: 130%;'],
+table[style='float: right; margin-left: 1em; margin-bottom: 0.5em; clear: right;;background:#FAFAFA;border:1px solid #BBBBBB;width:258px;font-size:11px'] td[style='width:50%;text-align:left;padding-left:0.5em;padding-right:0.5em;'],
+table[style='float: right; margin-left: 1em; margin-bottom: 0.5em; clear: right;;background:#FAFAFA;border:1px solid #BBBBBB;width:258px;font-size:11px'] td[style='background:#d0e1e0;width:50%;text-align:right;padding-left:0.5em;padding-right:0.5em;'],
+table [style='line-height: 1.3em; padding-top: 2px; padding-bottom: 2px;'],
+
 [style='background: #F9F9F9; border-width:1px; border-color: #ababab; padding: 0px; width: 100%;'] .mw-collapsible.mw-made-collapsible th[colspan='2'], /* Right https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 [style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='width: 50%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
 [style='width: 77%; vertical-align:top;border: 1px solid #AAAAAA; background-color:white;'] [style='max-width: 40%'], /* https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Video_games */
