Commons uploading: add alternative URL

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.18
+@version        1.1.19
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1094,7 +1094,8 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	}
 }
 
-@-moz-document url-prefix("https://commons.wikimedia.org/w/index.php?title=Special%3AUploadWizard") {
+@-moz-document url-prefix("https://commons.wikimedia.org/w/index.php?title=Special:UploadWizard"),
+			   url-prefix("https://commons.wikimedia.org/wiki/Special:UploadWizard") {
 	h1,
 	.mwe-upwiz-info-file.filled .oo-ui-fieldLayout-header, /* Hide labels from fields */
 	#contentSub,
