--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.21
+@version        1.1.22
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -55,6 +55,7 @@ input,
 	left: 180px;
 }
 
+#siteSub, /* "From Wikipedia, the free encyclopedia" */
 hr,
 a[title='Log out'],
 #coordinates,
