--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.23
+@version        1.1.25
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1131,6 +1131,17 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 		max-width: 100vw !important;
 		max-height: unset !important;
 		height: auto !important;
+	}
+}
+
+@-moz-document url-prefix("https://commons.wikimedia.org/w/index.php?title=Special:ListFiles") {
+
+
+	.listfiles th:last-child,
+	.listfiles td:last-child
+	/* Remove last column "Current version" */
+	{
+		display: none;
 	}
 }
 
