--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.33
+@version        1.1.34
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1092,7 +1092,8 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	#mw-imagepage-section-filehistory > p,
 	#metadata,
 	.mw-imagepage-section-metadata > p,
-	#filelinks
+	h2#filelinks, /* File usage on Commons */
+	h2#globalusage /* Title "File usage on other wikis" */
 	{
 		display: none;
 	}
@@ -1131,6 +1132,9 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	/* Description of the field for categories */
 	fieldset.mwe-upwiz-fieldsetLayout.oo-ui-layout.oo-ui-labelElement.oo-ui-fieldsetLayout legend,
 	fieldset.mwe-upwiz-fieldsetLayout.oo-ui-layout.oo-ui-labelElement.oo-ui-fieldsetLayout label,
+
+	/* "The category shown in red does not exist and lacks a description page. If a similar category exists, we recommend you use that. If not, please go to the new category page and add a description."*/
+	fieldset .oo-ui-fieldLayout-messages,
 
 	.mwe-upwiz-details-help
 	{
