Uploading: hide coords input

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.36
+@version        1.1.37
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1140,6 +1140,8 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	#mwe-upwiz-steps,
 	.mwe-upwiz-deed-license-group .mwe-upwiz-deed-license-group-subhead.mwe-upwiz-deed-title,
 	.mwe-upwiz-fieldLayout-indicator.oo-ui-widget.oo-ui-widget-enabled.oo-ui-labelElement.oo-ui-labelElement-label,oo-ui-labelWidget, /* Categories: "Optional" */
+
+	.oo-ui-fieldsetLayout-group > div:nth-child(2), /* Coords lat lon */
 
 	/* Description of the field for categories */
 	fieldset.mwe-upwiz-fieldsetLayout.oo-ui-layout.oo-ui-labelElement.oo-ui-fieldsetLayout legend,
