Add highlighting of links of non-existing categories to red - for my userscript

--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.40
+@version        1.1.41
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1179,6 +1179,11 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 		max-width: 100vw !important;
 		max-height: unset !important;
 		height: auto !important;
+	}
+
+	/* Category not exists - for my userscript https://gitlab.com/vitaly-zdanevich-userscripts/commonsUploadWizzardLastStepShowCategories */
+	.mwe-upwiz-thumbnail-side a.red {
+		color: red !important
 	}
 }
 
